@@ -1,5 +1,8 @@
 2005-01-14  Andrew Cagney  <cagney@gnu.org>
 
+	* utils.c (error_output_message): Delete function.
+	* defs.h (error_output_message): Delete declaration.
+
 	* linespec.c (symtab_from_filename, decode_variable): Use
 	throw_error instead of error_silent.
 	* breakpoint.c (do_captured_parse_breakpoint): Change return type
